# scorpio_ros2

./: README.md
doc/: install.sh
doc/rules/: scorpio-usb-serial.rules
src/: onekey.sh
src/other/costmap_converter-ros2/: README.md
src/other/teb_local_planner/: README.md
src/scorpio/executive_smach/smach/: setup.py
src/scorpio/executive_smach/smach_ros/: setup.py
src/scorpio/scorpio_bringup/: CMakeLists.txt  package.xml
src/scorpio/scorpio_bringup/launch/: driver_bringup.launch.py
src/scorpio/scorpio_common_interfaces/: CMakeLists.txt  package.xml
src/scorpio/scorpio_description/: CMakeLists.txt  package.xml
src/scorpio/scorpio_description/launch/: scorpio_description.launch.py  scorpio_xacro.py  view_model.launch.py
src/scorpio/scorpio_description/robots/: scorpio.urdf.xacro
src/scorpio/scorpio_description/urdf/: scorpio.urdf.xacro
src/scorpio/scorpio_teleop/: CMakeLists.txt  package.xml
src/scorpio/scorpio_teleop/launch/: teleop.launch.py
src/scorpio/scorpio_teleop/scripts/: keyboard_control.sh
src/scorpio/scorpio_teleop/src/: teleop_node.cpp
src/scorpio_app/scorpio_follower/: CMakeLists.txt  package.xml
src/scorpio_app/scorpio_follower/doc/: readme
src/scorpio_app/scorpio_follower/launch/: follow_run.sh  scorpio_follower.launch.py
src/scorpio_app/scorpio_follower/src/: scorpio_follower.cpp
src/scorpio_app/scorpio_navigation2/: CMakeLists.txt  package.xml
src/scorpio_app/scorpio_rtab_map/: CMakeLists.txt  package.xml
src/scorpio_app/scorpio_yolov8/: package.xml  setup.cfg  setup.py
src/scorpio_driver/base/scorpio_base/: CMakeLists.txt  package.xml
src/scorpio_driver/base/scorpio_base/cfg/: DeviceParams.cfg  device_config.yaml
src/scorpio_driver/base/scorpio_base/include/scorpio_base/: kfilter.hpp  mylock.hpp  scorpio_base_constants.h  scorpio_base_driver.h  scorpio_base_serial.h  serial_port_motor.h  serial_port_stm32.h
src/scorpio_driver/base/scorpio_base/launch/: scorpio_base.launch.py
src/scorpio_driver/base/scorpio_base/msg/: ScorpioBaseOdom.msg
src/scorpio_driver/base/scorpio_base/src/: cmd_vel_to_ackermann_cmd.cpp  scorpio_base_driver.cpp  scorpio_base_node.cpp  scorpio_base_serial.cpp  serial_port_motor.cpp  serial_port_stm32.cpp
src/scorpio_driver/my_pkg/: package.xml
src/scorpio_driver/test_pkg/: package.xml
(+47 files in other folders)
